Fix conflicting argument (-v is used for version)

--- a/patchman.in
+++ b/patchman.in
@@ -204,7 +204,7 @@ for arg in "$@"; do
     ${C_OK}-o|--original${C_RESET}           Use the original file unpatched
 
     ${C_OK}-l|--list-changed${C_RESET}       List the changed backup files
-    ${C_OK}-v|--vimdiff <files>${C_RESET}    Interactively diff the files
+    ${C_OK}-V|--vimdiff <files>${C_RESET}    Interactively diff the files
     ${C_OK}-D|--diff <files>${C_RESET}       Diff the given files
     ${C_OK}-p|--print <files>${C_RESET}      Print the patched file
     ${C_OK}-r|--revert <files>${C_RESET}     Revert the given files
@@ -223,7 +223,7 @@ Author: Alastair Hughes <hobbitalastair at yandex dot com>\n"
 
         -l|--list-changed) LIST_CHANGED="true";;
         -p|--print) PRINT="true"; FILE_ARGS="true";;
-        -v|--vimdiff) VIMDIFF="true"; FILE_ARGS="true";;
+        -V|--vimdiff) VIMDIFF="true"; FILE_ARGS="true";;
         -D|--diff) DIFF="true"; FILE_ARGS="true";;
         -r|--revert) REVERT="true"; FILE_ARGS="true";;
         -s|--save) SAVE="true"; FILE_ARGS="true";;
