--- a/patchman.in
+++ b/patchman.in
@@ -18,7 +18,7 @@ PACCACHEDIR="${PACCACHEDIR:-@PACCACHEDIR@}"
 C_ERR="$(tput setaf 1; tput bold)"
 C_WARN="$(tput setaf 3; tput bold)"
 C_OK="$(tput setaf 2; tput bold)"
-C_BOLD="$(tput bold)"
+C_BOLD="$(tput setaf 9; tput bold)"
 C_RESET="$(tput sgr0)"
 
 error() {
